tooling/nargo_cli/tests/compile_failure/dup_trait_implementation_5/src/main.nr
mod module1;
mod module2;
mod module3;
mod module4;

fn main() {
}
